<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="website_data">http://www.cdf.toronto.edu/usage/</string>
    <string name="website_faq">http://www.cdf.toronto.edu/faq.html</string>
    <string name="website_cats">https://www.imgur.com/r/catgifs/</string>
    <string name="website_me">http://www.echeung.me/</string>
    <string name="website_github">https://github.com/arkon94/CDFLabs</string>

    <string name="app_name">CDF Labs</string>
    <string name="action_map">Locations</string>
    <string name="action_cdf">CDF FAQ</string>
    <string name="action_about">About</string>

    <string name="no_connection">There\'s no network connection right now. Try again later.</string>
    <string name="retry">Retry</string>

    <string name="pull_text">Swipe down to refresh</string>
    <string name="pull_refreshing">Getting updates...</string>

    <string name="free_comps">FREE</string>
    <string name="stats" formatted="false">%s machines total (%s%% busy)</string>
    <string name="timestamp">Last updated: %s</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_map">Locations</string>
    <string name="title_section1">Bahen</string>
    <string name="title_section2">Gerstein</string>
    <string name="title_section3">NX</string>

    <string name="bahen_name">Bahen Centre for Information Technology</string>
    <string name="bahen_address">40 St George St</string>
    <string name="bahen_web">https://www.google.com/maps/place/Bahen+Centre+for+Information+Technology/@43.659489,-79.397613,17z/data=!3m1!4b1!4m2!3m1!1s0x882b34c75165c957:0x6459384147b4b67b?hl=en</string>
    <string name="bahen_info">The Bahen Centre hosts the majority of the CDF labs. The labs are located in the following rooms:
BA 2210, BA 2220, BA 2240, BA 3175, BA 3185, BA 3195 and the Great Hall (BA 3200).</string>
    <string name="map_bahen_second_alt">Map of Bahen\'s second floor</string>
    <string name="map_bahen_third_alt">Map of Bahen\'s third floor</string>

    <string name="gerstein_name">Gerstein Science Information Centre</string>
    <string name="gerstein_address">Sigmund Samuel Library, 7 King’s College Circle</string>
    <string name="gerstein_web">https://www.google.com/maps/place/Gerstein+Science+Information+Centre/@43.66208,-79.393764,17z/data=!3m2!4b1!5s0x882b34b84d333c2f:0xc015f6f99a229640!4m2!3m1!1s0x882b34b84d5634db:0x405cf564711b5702?hl=en</string>
    <string name="gerstein_info">Gerstein is home to one CDF lab located in room 2360 at the north end of the second floor.</string>
    <string name="map_gerstein_alt">Map of Gerstein\'s second floor</string>

    <string name="nx_name">NX (Remote Access Server)</string>
    <string name="nx_web">http://www.cdf.utoronto.ca/using_cdf/remote_access_server.html</string>
    <string name="nx_info">CDF offers an NX server for remote desktop connection from home or from your laptop via the wireless network. The NX technology attempts to greatly improve the experience of remote graphical connection over a slow Internet link by optimising perceived speed of response and allowing one to suspend a graphical session and reconnect to it later. You can also connect to CDF\'s NX server from any CDF workstation or Information Commons workstation using a specially crafted profile.</string>
    <string name="nx_more">More information online</string>

    <string name="floor_second">Second floor</string>
    <string name="floor_third">Third floor</string>

</resources>
